# Rest-APIs-with-rust-and-mongodb

./: Cargo.toml  README.md
src/: main.rs
